# embodied_intelligence

./: .gitignore  CMakeLists.txt  Doxyfile.in
config/: check_depend.cmake  sun-demo.cmake  sun_macros.cmake
introduce/: company.md  summary.md
note/docker/test1/: Dockerfile
note/script/: initialize.sh  install_clash.sh
peitian/config/: cxx-flags.cmake  sun-rtt.cmake
peitian/note/: installs.md
peitian/src/sun/earth/: CMakeLists.txt  io_state.hpp
peitian/test_code/: Doxyfile.in
peitian/test_code/src/: main.cpp
peitian/test_code/src/sun/earth/: basic.cpp
src/: CMakeLists.txt  Doxyfile.in  main.cpp
src/sun/: CMakeLists.txt
src/sun/earth/: basic.hpp  io_state.cpp
src/sun/nk/: CMakeLists.txt  list_head.hpp
test/: CMakeLists.txt  test_basic.cpp  test_io_state.cpp
tests/: CMakeLists.txt  basic_test.cpp  readme.md
